  contains a proper extension. Before this fix, qutebrowser would use the URL's
  data contents as filename with QtWebEngine; or "binary blob" with the Qt network
  stack.
- When `:tab-only` is run before a tab is available, an error is now shown
  instead of crashing.
- A couple of long URLs (such as `qute://pdfjs` URLs) are now not added to the
  history database anymore.

v1.14.1 (2020-12-04)
--------------------

Added
~~~~~

- With v1.14.0, qutebrowser configures the main window to be transparent, so
  that it's possible to configure a translucent tab- or statusbar. However, that
  change introduced various issues, such as performance degradation on some
  systems or breaking dmenu window embedding with its `-w` option. To avoid those
  issues for people who are not using transparency, the default behavior is
  reverted to versions before v1.14.0 in this release. A new `window.transparent`
  setting can be set to `true` to restore the behavior of v1.14.0.

Changed
~~~~~~~

- Windows and macOS releases now ship Qt 5.15.2, which is based on
  Chromium 83.0.4103.122 with security fixes up to 86.0.4240.183. This includes
  CVE-2020-15999 in the bundled freetype library, which is known to be exploited
  in the wild. It also includes various other bugfixes/features compared to
  Qt 5.15.0 included in qutebrowser v1.14.0, such as:
    * Correct handling of AltGr on Windows
    * Fix for `content.cookies.accept` not working properly
    * Fixes for screen sharing (some websites are still broken until an upcoming Qt
      5.15.3)
    * Support for FIDO U2F / WebAuth
    * Fix for the unwanted creation of directories such as `databases-incognito` in
      the home directory
    * Proper autocompletion in the devtools console
    * Proper signalisation of a tab's audible status (`[A]`)
    * Fix for a hang when opening the context menu on macOS Big Sur (11.0)
    * Hardware accelerated graphics on macOS

Fixed
~~~~~
