@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+
+<html lang="en">
+	<head>
+		<title>Should crash immediately</title>
+		<meta charset="UTF-8"/>
+	</head>
+	<body>
+		<p>Should crash immediately</p>
+		<script>navigator.getInstalledRelatedApps();</script>
+	</body>
+</html>
